[package]
name = "MushokuTensei"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0


[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher", "shader_format_spirv"] }
bevy_app_compute = { path = "bevy_app_compute", features = ["shader_format_spirv"] }
bytemuck = "1.13.1"
iyes_perf_ui = "0.5.0"
